<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context="com.example.sagar.dairysupply.ProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/custom_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            android:background="#525A6A">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">


                <View
                    android:id="@+id/marginView"
                    android:layout_width="1dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"/>

                <ImageView
                    android:id="@+id/product1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="50dp"
                    android:src="@drawable/ic_product_1"
                    android:background="#089CDE"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product1"
                    android:textColor="#ffffff"
                    android:layout_alignBottom="@+id/product1"
                    android:layout_marginStart="10dp" />

                <ImageView
                    android:id="@+id/product2"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/product1"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="4.5dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/marginView"
                    android:src="@drawable/ic_product_2"
                    android:padding="50dp"
                    android:background="#F67310" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product2"
                    android:textColor="#FFFFFF"
                    android:layout_alignBottom="@+id/product2"
                    android:layout_marginLeft="10dp"/>

                <ImageView
                    android:id="@+id/product3"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/product1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignStart="@+id/marginView"
                    android:padding="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="4.5dp"
                    android:src="@drawable/ic_product_3"
                    android:background="#DE4A31"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product3"
                    android:textColor="#ffffff"
                    android:layout_alignBottom="@+id/product3"
                    android:layout_alignStart="@+id/product3"
                    android:layout_marginStart="10dp" />

                <ImageView
                    android:id="@+id/product4"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/product2"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="4.5dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignEnd="@+id/marginView"
                    android:src="@drawable/ic_product_4"
                    android:padding="50dp"
                    android:background="#9C27B0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product4"
                    android:textColor="#ffffff"
                    android:layout_alignBottom="@+id/product4"
                    android:layout_alignStart="@+id/product4"
                    android:layout_marginStart="10dp" />

                <ImageView
                    android:id="@+id/product5"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/product3"
                    android:layout_alignParentEnd="true"
                    android:layout_alignStart="@+id/marginView"
                    android:padding="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="4.5dp"
                    android:src="@drawable/ic_product_5"
                    android:background="#AC9CCD"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product5"
                    android:textColor="#ffffff"
                    android:layout_alignBottom="@+id/product5"
                    android:layout_alignStart="@+id/product5"
                    android:layout_marginStart="10dp" />


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/leftNavDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#394A5A"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>
